k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gmp-frontend
  namespace: gmp-production
  labels:
    run: gmp-frontend
spec:
  ports:
    - port: 3000
      protocol: TCP
  selector:
    app:  gmp-frontend
