k8s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gmp-frontend
  namespace: gmp-staging
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: gmp-production-redirect-https@kubernetescrd
spec:
  rules:
    - host: "gmp.k3s.bangun-kreatif.com"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: gmp-frontend
                port:
                  number: 3000
  tls:
    - hosts:
        - "gmp.k3s.bangun-kreatif.com"
      secretName: gmp-k3s-bangun-kreatif-com-tls
